adicionar validacao de campos obrigatorios - BASIS-215245

--- a/frontend/src/app/seguranca/components/servidores/formulario-servidor/formulario-servidor.component.html
+++ b/frontend/src/app/seguranca/components/servidores/formulario-servidor/formulario-servidor.component.html
@@ -173,7 +173,7 @@
             </div>
         </div>
         <div class="p-grid p-jc-end">
-            <button pButton type="submit" label="Salvar" pTooltip="Salvar registro de servidor"></button>
+            <button pButton type="submit" label="Salvar" pTooltip="Salvar registro de servidor" [disabled]="!valid()"></button>
         </div>
     </div>
 </form>
